--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
     "@sendgrid/mail": "^8.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "typescript": "^5.6.2",
+    "ts-node": "^10.9.2"
   }
 }
